--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,21 +1,26 @@
+/* nav bar at the bottom: fixed location */
 .nav {
   position: fixed;
   bottom: 0;
   width: 100%;
   background-color: #f9f9fa;
-  padding: 20px 50px;
+  padding: 22px 50px;
+  /* Make the box keep the given size regardless a big padding */
   box-sizing: border-box;
-  border-top: 1px solid rgba(121, 121, 121, 0.3);
+  border-top: 0.5px solid rgba(121, 121, 121, 0.3);
 }
-.nav__list {
+.nav_list {
+
   display: flex;
   justify-content: space-between;
 }
-.nav__link {
+.nav_link {
   position: relative;
   color: #2e363e;
 }
 
+/* Nav-bar 
+message icon notification animation */
 @keyframes notificationAnimation {
   0% {
     transform: none;
@@ -27,14 +32,67 @@
     transform: none;
   }
 }
-
-.nav__notification {
+.nav_link:nth-of-type(2) {
+  position: relative;
+}
+.nav_chat-notification {
+  background-color: tomato;
+  border-radius: 50%;
+  color: white;
+  width: 20px;
+  height: 20px;
+  /* make the contents in center */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* decide the location */
   position: absolute;
-  left: 15px;
-  bottom: 15px;
+  right: -8px;
+  bottom: 6px;
+  /* font-size: 15px; */
+  /* padding: 2px 5px; */
   animation: notificationAnimation 2s ease-in-out infinite;
 }
 
+/* Nav bar
+more icon(4th) notification animation */
+@keyframes notificationAnimation2 {
+  0% {
+    transform: none;
+    transform: scale(0.2);
+  }
+  50% {
+    transform: translateY(-5px) rotateY(360deg);
+  }
+  100% {
+    transform: none;
+    transform: scale(0.2);
+  }
+}
+
+.nav_link:nth-of-type(4) {
+  position: relative;
+}
+.nav_more-notification {
+  background-color: tomato;
+  border-radius: 50%;
+  color: white;
+  width: 10px;
+  height: 10px;
+  /* make the contents in center */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* decide the location */
+  position: absolute;
+  right: -4px;
+  bottom: 15px;
+/* animation  */
+  animation: notificationAnimation2 2s ease-in-out infinite;
+}
+
+/* nav bar 
+gradual appear animation */
 @keyframes appearBtnAnimation {
   from {
     opacity: 0;
@@ -44,19 +102,17 @@
     transform: none;
   }
 }
-
-.nav__btn {
+.nav_btn {
   transform: translateY(50px);
   opacity: 0;
   animation: appearBtnAnimation 0.3s ease-in-out forwards;
 }
-
-.nav__btn:nth-child(2) {
+.nav_btn:nth-child(2) {
   animation-delay: 0.2s;
 }
-.nav__btn:nth-child(3) {
+.nav_btn:nth-child(3) {
   animation-delay: 0.5s;
 }
-.nav__btn:last-child {
+.nav_btn:last-child {
   animation-delay: 0.8s;
 }
