--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -3,27 +3,14 @@
   justify-content: space-between;
   align-items: center;
   padding: var(--horizontal-space);
-  margin-bottom: 15px;
+  margin: 20px 0;
 }
 
-.screen-header__title {
+.screen-header_title {
   font-size: 32px;
   font-weight: 600;
 }
 
-.screen-header__icons span {
+.screen-header_icons span {
   margin-left: 25px;
-}
-
-@keyframes rotateCog {
-  from {
-    transform: none;
-  }
-  to {
-    transform: rotateZ(360deg);
-  }
-}
-
-.screen-header__icons .fa-cog:hover {
-  animation: rotateCog 1s linear infinite;
 }
