--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,54 +1,67 @@
 .user-component {
+  margin-bottom: 20px;
+}
+
+.user-component a {
+  width: 100vw;
+  display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .user-component,
-.user-component__column:first-child {
+.user-component_column:first-child {
   display: flex;
   align-items: center;
 }
 
-.user-component__avatar {
+.user-component_avatar {
   width: 70px;
   height: 70px;
-  border-radius: 30px;
+  border-radius: 26px;
   margin-right: 20px;
 }
 
-.user-component__title {
+.user-component_title {
   font-weight: 600;
   font-size: 22px;
 }
 
-.user-component__subtitle {
+.user-component_subtitle {
   margin-top: 8px;
   font-size: 17px;
   color: rgba(0, 0, 0, 0.5);
 }
-
-.user-component__avatar--xl {
-  width: 80px;
-  height: 80px;
+.user-component_subtitle i {
+  color: tomato;
+  opacity: 0.6;
 }
 
-.user-component__avatar--sm {
+.user-component_avatar--xl {
+  width: 75px;
+  height: 75px;
+  border-radius: 30px;
+}
+
+.user-component_avatar--sm {
   width: 60px;
   height: 60px;
-  border-radius: 25px;
+  border-radius: 24px;
 }
 
-.user-component__title--not-bold {
+.user-component_title--not-bold {
   font-weight: 400;
+  font-size: 20px;
 }
 
-.user-component__column:last-child {
+.user-component_column:last-child {
   color: rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 }
 
-.user-component__time {
+.user-component_time {
   margin-bottom: 10px;
   display: block;
 }
