--- a/css/reset.css
+++ b/css/reset.css
@@ -122,11 +122,11 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-
+/* clicked input */
 input:focus {
   outline: none;
 }
-
+/* links */
 a {
   color: inherit;
   text-decoration: none;
