--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -1,31 +1,45 @@
-.more-screen .icon-row {
-  margin-top: 35px;
+/* Icon-row dot-notification adjustment  */
+.more-icon-row-dot-notification {
+  right: 1px;
+  bottom: 45px;
+}
+  
+/* more screen user icon animation  */
+.more-screen-user-icon i:hover {
+  color: var(--black);
+}
+.more-user-component {
+  margin-top: -10px;
 }
 
 .more-suggestions {
-  margin-top: 50px;
+  margin-top: 20px;
   border-top: var(--main-border);
-  padding-top: 40px;
+  padding: 20px 0;
 }
 
-.more-suggestions__title {
+.more-suggestions_title {
   margin-bottom: 30px;
 }
 
-.more-suggestions__icons {
+.more-suggestions_icons {
   display: flex;
+  justify-content: flex-start;
 }
 
-.more-suggestions__icon {
+.more-suggestions_icon {
   margin-right: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.more-suggestions__icon-image {
-  width: 60px;
-  height: 60px;
+.more-suggestions_icon span {
+  font-size: 14px;
+}
+.more-suggestions_icon-image img {
+  width: 50px;
+  height: 45px;
   background-color: var(--yellow);
   border-radius: 10px;
   display: flex;
@@ -34,7 +48,14 @@
   margin-bottom: 10px;
 }
 
-.more-suggestions__icon-image i {
-  font-size: 32px;
+.more-suggestions_icon-image i {
+  font-size: 30px;
+  background-color: var(--yellow);
   color: white;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+  padding:  12px 10px;
 }
