--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,30 @@
+/* font loaded */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
 
+/* reset all styles */
 @import "reset.css";
+
+/* refer to the page design factors */
 @import "variables.css";
 
 /* Components */
 @import "components/status-bar.css";
+@import "components/welcome-header.css";
+@import "components/login-form.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/alt-screen-header.css";
+@import "components/friends-display-bar.css";
 @import "components/user-component.css";
-@import "components/badge.css";
+@import "components/badge-notification.css";
 @import "components/icon-row.css";
+@import "components/divider.css";
 @import "components/no-mobile.css";
+@import "components/animation.css";
+@import "components/dot-notification.css";
 
 /* Screens */
-@import "screens/login.css";
+/* @import "screens/login.css"; */
 @import "screens/friends.css";
 @import "screens/find.css";
 @import "screens/more.css";
@@ -24,9 +34,11 @@
 body {
   color: #2e363e;
   font-family: "Open Sans", sans-serif;
-  background-color: tomato;
+  /* to test the fixed location of the nav bar */
+  /* height: 1000vh; */
 }
 
 .main-screen {
+  height: 100vh;
   padding: 0px var(--horizontal-space);
 }
