--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -2,11 +2,12 @@
 header.alt-header>div.alt-header_column*3 + enter */
 
 .alt-header {
-  padding: var(--horizontal-space);
-  margin: 20px 0;
+  padding: 0 var(--horizontal-space);
+  margin: 40px 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: ;
 }
 .alt-header i {
   opacity: 0.6;
@@ -21,7 +22,7 @@ header.alt-header>div.alt-header_column*3 + enter */
 }
 
 .alt-header_title {
-  font-size: 28px;
+  font-size: 1.3em;
   font-weight: 600;
 }
 
