--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -24,12 +24,12 @@
 
 .user-component_title {
   font-weight: 600;
-  font-size: 22px;
+  font-size: 1.1em;
 }
 
 .user-component_subtitle {
   margin-top: 8px;
-  font-size: 17px;
+  font-size: 0.8em;
   color: rgba(0, 0, 0, 0.5);
 }
 .user-component_subtitle i {
@@ -40,18 +40,18 @@
 .user-component_avatar--xl {
   width: 75px;
   height: 75px;
-  border-radius: 30px;
+  border-radius: 1.3em;
 }
 
 .user-component_avatar--sm {
   width: 60px;
   height: 60px;
-  border-radius: 24px;
+  border-radius: 1.1em;
 }
 
 .user-component_title--not-bold {
   font-weight: 400;
-  font-size: 20px;
+  font-size: 1em;
 }
 
 .user-component_column:last-child {
