--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -33,17 +33,17 @@
 }
 
 .main-chat {
-  margin-top: 180px;
+  margin-top:100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   animation: fadeIn 0.8s linear;
 }
 
-.chat__timestamp {
+.chat_timestamp { 
   color: white;
   background-color: #92a4b2;
-  padding: 15px;
+  padding: 10px;
   font-size: 14px;
   border-radius: 25px;
   margin-bottom: 25px;
@@ -62,36 +62,36 @@
   margin-right: 10px;
 }
 
-.message__author {
+.message_author {
   margin-bottom: 5px;
   display: block;
 }
 
-.message__info {
+.message_info {
   display: flex;
   align-items: flex-end;
 }
 
-.message__bubble {
+.message_bubble {
   background-color: white;
   padding: 13px;
-  font-size: 18px;
+  font-size: 17px;
   border-radius: 15px;
   border-top-left-radius: 0px;
   margin-right: 5px;
 }
 
-.message__time,
-.message__author {
+.message_time,
+.message_author {
   opacity: 0.8;
   font-size: 14px;
 }
 
-.message-row--own {
+.message-row-own {
   justify-content: flex-end;
 }
 
-.message-row--own .message__bubble {
+.message-row-own .message_bubble {
   background-color: var(--yellow);
   border-top-right-radius: 0px;
   border-top-left-radius: 15px;
@@ -99,13 +99,15 @@
   margin-left: 5px;
 }
 
-.message-row--own .message__info {
+.message-row-own .message_info {
   flex-direction: row-reverse;
 }
 
-.reply {
+/* reply format  */
+.reply  {
   position: fixed;
-  bottom: 0;
+  top: 63vh;
+  height: 7vh;
   width: 100%;
   background-color: white;
   display: flex;
@@ -116,10 +118,10 @@
   transition: transform 0.3s ease-in-out;
 }
 
-.reply .reply__column:first-child {
+.reply .reply_column:first-child {
   width: 10%;
 }
-.reply .reply__column:last-child {
+.reply .reply_column:last-child {
   width: 90%;
   position: relative;
 }
@@ -129,49 +131,52 @@
 }
 
 .reply input {
-  padding: 14px;
+  padding: 10px;
   width: 100%;
+  font-size: 17px;
+  background-color: rgba(0,0,0,0.1);
   border: var(--main-border);
   border-radius: 25px;
   box-sizing: border-box;
   transition: all 0.3s ease-in-out;
 }
-
-.reply__column:last-child > i,
-.reply__column:last-child button {
+/* yellow load button + smiley face icon  */
+.reply_column:last-child > i,
+.reply_column:last-child button {
   position: absolute;
   right: 3px;
   top: 3px;
 }
-
-.reply__column:last-child > i {
+/* smiley face icon in the text input bar  */
+.reply_column:last-child > i {
   right: 50px;
-  top: 15px;
+  top:7px;
 }
-
-.reply__column button {
+/* yellow load button  */
+.reply_column button {
   background-color: var(--yellow);
   border: none;
-  width: 40px;
-  height: 40px;
+  width: 38px;
+  height: 38px;
   border-radius: 50%;
 }
-
-.reply__column button i {
+/* yellow load button arrow icon  */
+.reply_column button i {
   opacity: 1;
 }
-.reply__column button:focus,
-.reply__column button:active {
+/* button actions  */
+.reply_column button:focus,
+.reply_column button:active {
   outline: none;
 }
 
-.reply .reply__column:first-child,
+.reply .reply_column:first-child,
 .reply .fa-smile-wink,
 .reply button {
   transition: opacity 0.3s ease-in-out;
 }
 
-.reply:focus-within .reply__column:first-child,
+.reply:focus-within .reply_column:first-child,
 .reply:focus-within .fa-smile-wink,
 .reply:focus-within button {
   opacity: 0;
@@ -185,3 +190,4 @@
 .reply:focus-within {
   transform: translateY(80px);
 }
+
