--- a/keyboard.css
+++ b/keyboard.css
@@ -13,25 +13,26 @@
 /* keyboard rows positions  */
 .keyboard-first-row {
   position: fixed;
-  top: 71vh;
+  bottom: 147px;
+  margin-top: 2px;
+  padding-top: 2px;
 }
 .keyboard-second-row {
   position: fixed;
-  top:78vh;
+  bottom: 98px;
 }
 .keyboard-third-row {
   position: fixed;
-  top: 85vh;
+  bottom: 49px;
 }
 .keyboard-fourth-row {
   position: fixed;
-  top: 92vh;
+  bottom: 0px;
 }
 
 
 .keyboard-rows {
   width: 100%;
-  height:8vh; 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,7 +40,7 @@
 
 .keyboard-rows-row {
   width: 100%;
-  height: 8vh;
+  height: 49px;
   display: inline-flex;
   justify-content:center;
   background-color: #D1D4D9;
@@ -58,6 +59,7 @@
   padding: 9px 2px 12px 2px;
   font-size: 1.5em;
   width:9vmin;
+  height: 45px;
   text-align: center;
   background-color: white;
   border-radius: 11%;
